treesitter/grammar.js
    source_file: $ => itemList($, $._item),

    // Items ----------------------------------------------------------------

    _item: $ => choice(
      $.function_item,
      $.intrinsic_fn_item,
      $.extern_item,
      $.struct_item,
      $.enum_item,
      $.impl_item,
      $.spec_item,
      $.static_item,
      $.const_item,
      $.use_item,
    ),

    visibility: _ => 'pub',

    // `unsafe` marks an operation, so it is read only where a function
    // declares one (ffi.md, "The gate"); the body of an `unsafe fn` is
    // not an unsafe context implicitly.
    function_item: $ => seq(
      optional(field('visibility', $.visibility)),
      optional('unsafe'),
      'fn',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.parameters),
      optional(field('return_type', $.return_type)),
      field('body', $.block),
    ),

    // A signature without a body, terminated by `;` (items.md, "Intrinsic
    // declarations"). The precondition-carrying intrinsics say `unsafe`.
    intrinsic_fn_item: $ => seq(
      optional(field('visibility', $.visibility)),
      optional('unsafe'),
      'intrinsic',
      'fn',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.parameters),
      optional(field('return_type', $.return_type)),
      ';',
    ),

    // `extern "C" { ... }` declares bodyless functions whose names are
    // the symbols the linker resolves (ffi.md, "External functions").
    // The convention is part of the declaration and only "C" is
    // defined; a grammar without a checker reads any string the same way.
    spec_item: $ => seq(
      optional(field('visibility', $.visibility)),
      'spec',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      $._block_lbrace,
      itemList($, $.spec_method),
      '}',
    ),

    // Signatures only: a body here is an error, and every implementation
    // supplies each declared method. An `unsafe` marker parses and the
    // checker refuses it for now (ffi.md).
    spec_method: $ => seq(
      optional(field('visibility', $.visibility)),
      optional('unsafe'),
      'fn',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.parameters),
      optional(field('return_type', $.return_type)),
      ';',
    ),

    return_type: $ => seq('->', field('type', $._type)),

    parameters: $ => seq(
      '(',
      optional(sepByTrailing($.parameter, ',')),
      ')',
    ),

    // `comp` marks a compile-time parameter; plain functions use the same
    // shape without it (comp.md).
    parameter: $ => seq(
      optional(field('comp', 'comp')),
      field('pattern', $._pattern),
      ':',
      field('type', $._type),
    ),

    // Types ----------------------------------------------------------------

    _type: $ => choice(
      $.primitive_type,
      $.unit_type,
      $.never_type,
      $.str_type,
      $.tuple_type,
      $.paren_type,
      $.function_type,
      $.array_type,
      $.slice_type,
      $.reference_type,
      $.raw_ptr_type,
      $.path_type,
    ),

    primitive_type: _ => token(choice(
      'i8', 'i16', 'i32', 'i64', 'i128', 'isize',
      'u8', 'u16', 'u32', 'u64', 'u128', 'usize',
      'f32', 'f64', 'bool',
    )),

    unit_type: _ => seq('(', ')'),

    str_type: _ => 'str',

    function_type: $ => seq(
      field('parameters', $.function_parameters),
      '->',
      field('return', $._type),
    ),

    function_parameters: $ => seq(
      '(',
      optional(sepByTrailing($._type, ',')),
      ')',
    ),

    reference_type: $ => seq(
      '&',
      optional('mut'),
      field('type', $._type),
    ),

    // A raw pointer is thin and Copy, outside the region system
    // (ffi.md). The outer star is shared and a `mut` after the pair
    // binds to the inner one, which is what `*(*mut T)` says spelled
    // out; a type position has no power, so the `**` pair is two stars.
    path_type: $ => field('path', $.path),

    // A closing `>>` splits into two `>` (grammar.md, "Types"). The lexer
    // gets that for free: a shift operator is not a valid token inside a
    // type argument list, so only `>` is ever considered there.
    type_arguments: $ => seq(
      '<',
      sepByTrailing($._type, ','),
      '>',
    ),

    // Patterns -------------------------------------------------------------

    // `parse_pattern` is a run of primary patterns separated by `|`, and
    // everything else binds tighter than that run. So `&` takes a primary
    // pattern, while a field or a tuple-variant element takes a whole one.
    _pattern: $ => choice(
      $._primary_pattern,
      $.or_pattern,
    ),

    wildcard_pattern: _ => '_',

    // `mut self` receivers spell the name with the module keyword, so a
    // receiver is accepted here like an identifier. `self` binds tighter
    // than a path segment would, because a receiver never carries one: a
    // lone `self` is the receiver, and `self::member` is still a path.
    mut_identifier_pattern: $ => seq(
      'mut',
      field('name', choice($.identifier, alias('self', $.self))),
    ),

    identifier_pattern: $ => prec(1, field('name', choice($.identifier, alias('self', $.self)))),

    literal_pattern: $ => $._literal,

    // A `-` binds only to an integer or float literal, so `x - 1` never
    // parses as a pattern (grammar.md, "Patterns").
    unit_variant_pattern: $ => field('path', $.path),

    tuple_variant_pattern: $ => seq(
      field('path', $.path),
      '(',
      optional(sepByTrailing($._pattern, ',')),
      ')',
    ),

    _expression: $ => choice(
      $.range_expression,
      $._operand,
    ),

    // A range that names an end says how it is bound, so only `..=` and
    // `..<` may be followed by one, and a bare `..` names an unbounded end
    // (grammar.md, "Lexical notes"). Splitting the rule in two is what
    // keeps `1..2` out while `..<2` and `1..` still read as ranges.
    //
    // A range sits below every binary operator and is never one of their
    // operands, which is why its endpoints are `_operand` rather than an
    // `_expression`: `a || b .. c` is `(a || b) .. c`.
    range_expression: $ => choice(
      seq(
        optional(field('start', $._operand)),
        field('operator', '..'),
      ),
      seq(
        optional(field('start', $._operand)),
        field('operator', choice('..=', '..<')),
        field('end', $._operand),
      ),
    ),

    // Everything a binary operator takes as an operand, and therefore
    // everything except a range. One rule for the whole spine, with the
    // binding power carried per operator, is what keeps `a + b * c` from
    // parsing both ways.
    _operand: $ => choice(
      $.binary_expression,
      $.comparison_expression,
      $.cast_expression,
      $._unary_expression,
    ),

    // A cast takes a unary expression and so takes everything a unary
    // expression bottoms out at, which is the postfix chain: `f() as T`
    // casts the call, not nothing.
    _unary_expression: $ => choice(
      $.unary_expression,
      $.borrow_expression,
      $.deref_expression,
      $._postfix_expression,
    ),

    binary_expression: $ => choice(
      ...[
        [PREC.OR, '||'],
        [PREC.AND, '&&'],
        [PREC.BIT_OR, '|'],
        [PREC.BIT_XOR, '^'],
        [PREC.BIT_AND, '&'],
        [PREC.SHIFT, choice('<<', '>>')],
        [PREC.ADD, choice('+', '-')],
        [PREC.MUL, choice('*', '/', '%')],
      ].map(([precedence, operator]) => prec.left(
        precedence,
        seq(
          field('left', $._operand),
          field('operator', operator),
          field('right', $._operand),
        ),
      )),
      // `**` is right-associative: `a ** b ** c` is `a ** (b ** c)`.
      prec.right(PREC.POW, seq(
        field('left', $._operand),
        field('operator', alias($._pow_operator, '**')),
        field('right', $._operand),
      )),
    ),

    // The power operator is two stars with the second one immediate
    // rather than a `**` token. A state that expects an operand has no
    // power, so `**p` and `**T` read as a pair of stars there, while
    // `a * *b` stays a multiplication of a dereference and `a **b` is
    // the power (grammar.md, "Expressions"). The alias keeps `**` a
    // single operator node, the way every other binary operator is.
    _pow_operator: $ => seq('*', token.immediate('*')),

    cast_expression: $ => prec.left(PREC.CAST, seq(
      field('value', $._unary_expression),
      'as',
      field('type', $._type),
    )),

    call_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('function', postfixOperand($)),
      field('arguments', $.arguments),
    )),

    arguments: $ => seq(
      '(',
      optional(sepByTrailing($._expression, ',')),
      ')',
    ),

    path_expression: $ => field('path', $.path),

    // A brace after a path continues the expression rather than ending the
    // statement it sits in, so this binds like the postfix operators it sits
    // among. Without that, `p := Point { x: 1 }` reads as a declaration of
    // `p` followed by a block-valued statement.
    closure_expression: $ => seq(
      optional($.capture_list),
      field('parameters', $.closure_parameters),
      '->',
      field('body', $._expression),
    ),

    capture_list: $ => seq(
      '[',
      optional(sepByTrailing($.capture, ',')),
      ']',
    ),

    // One capture and how the closure takes it: a bare name takes the
    // value (a move, or a copy for a Copy type), `&name` borrows
    // shared, and `&mut name` borrows exclusively (grammar.ebnf,
    // "Expressions").
    closure_parameters: $ => seq(
      '(',
      optional(sepByTrailing($.closure_parameter, ',')),
      ')',
    ),

    closure_parameter: $ => seq(
      optional(field('mut', 'mut')),
      field('name', choice($.identifier, $.wildcard_pattern)),
      optional(seq(':', field('type', $._type))),
    ),

    // A block that is an expression in its own right has no header to stay
    // on, so its brace is an ordinary one: `{ ... }` on a line of its own is
    // a block-valued statement. Every block that *does* have a header takes
    // `_block_lbrace` instead.
    block_expression: $ => seq('{', optional(blockBody($)), '}'),

    comp_block: $ => seq('comp', $.block),

    // `unsafe { ... }` opens the gate for the operations inside and its
    // value is the block's (ffi.md, "The gate").
    return_expression: $ => prec.right(seq(
      'ret',
      optional(field('value', $._expression)),
    )),

    break_expression: _ => 'break',

    continue_expression: _ => 'continue',

    // The `{` of `if`, `while`, `match`, and `else` stays on the header
    // line, which is what `_block_lbrace` enforces. A newline between the
    // consequence and its `else` is written out here rather than suppressed
    // by the scanner: telling a keyword from an identifier that starts the
    // same way means reading ahead, and the scanner has no way to put back
    // what it read.
    if_expression: $ => seq(
      'if',
      field('condition', $._condition),
      field('consequence', $.block),
      optional(seq(
        optional($._newline),
        'else',
        field('alternative', choice($.block, $.if_expression)),
      )),
    ),

    while_expression: $ => seq(
      'while',
      field('condition', $._condition),
      field('body', $.block),
    ),

    loop_expression: $ => seq('loop', field('body', $.block)),

    // A `for` head never reads a struct literal or a block as a range end,
    // so `for i in 0.. { }` is the open range and the loop body.
    for_expression: $ => seq(
      'for',
      field('pattern', $._pattern),
      'in',
      field('iterator', $._expression),
      field('body', $.block),
    ),

    match_expression: $ => seq(
      'match',
      field('scrutinee', $._expression),
      $._block_lbrace,
      itemList($, $.match_arm, $._arm_separator),
      '}',
    ),

    match_arm: $ => seq(
      field('pattern', $._pattern),
      '=>',
      field('value', $._expression),
    ),

    // `if cond block` or `if pattern := expr block`; `while` mirrors it.
    _condition: $ => choice(
      $.declaration_condition,
      $._expression,
    ),

    declaration_condition: $ => seq(
      field('pattern', $._pattern),
      ':=',
      field('value', $._expression),
    ),

    // Statements and blocks ------------------------------------------------

    block: $ => seq(
      $._block_lbrace,
      optional(blockBody($)),
      '}',
    ),

    declaration_statement: $ => seq(
      optional(field('comp', 'comp')),
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      ':=',
      field('value', $._expression),
    ),

    // The parser reads the left side as an ordinary expression and leaves
    // the question of whether it names a place to the checker, so the
    // grammar does not restrict it either.
    assignment_statement: $ => seq(
      field('left', $._expression),
      field('operator', choice(
        '=', '+=', '-=', '*=', '/=', '%=', '**=', '&=', '|=', '^=', '<<=', '>>=',
      )),
      field('right', $._expression),
    ),

    // A block's last expression is its value rather than a statement, and
    // both readings parse, so the statement is the one that loses.
    expression_statement: $ => prec.dynamic(-1, seq(
      field('expression', $._expression),
      $._terminator,
    )),

    // A statement ends at a `;` or at the newline the lexer inserts. A
    // `match` arm accepts a run of `,` and `;` as its separator.
    _terminator: $ => choice(';', $._newline),
    _arm_separator: $ => choice(',', ';', $._newline),

    // Paths ----------------------------------------------------------------

    // `Name<T>` puts its type arguments straight after a segment and
    // `Name::<T>::member` after a `::`, which is the same thing with the
    // turbofish spelled out. Either may follow any segment, and either may
    // be followed by more segments (parser.cc, "parse_path").
    path: $ => seq(
      field('segment', $._path_segment),
      optional(field('type_arguments', $.type_arguments)),
      repeat(seq('::', choice(
        seq(
          field('segment', $._path_segment),
          optional(field('type_arguments', $.type_arguments)),
        ),
        field('type_arguments', $.type_arguments),
      ))),
    ),

    _path_segment: $ => choice(
      alias('package', $.package),
      alias('self', $.self),
      alias('super', $.super),
      alias('Self', $.self_type),
      $.identifier,
    ),

    // Literals -------------------------------------------------------------

    // `_` alone is the wildcard token and `_foo` is an identifier, which
    // is the same split the lexer makes: a leading underscore starts an
    // identifier unless nothing follows it.
    identifier: _ => /[A-Za-z][A-Za-z0-9_]*|_[A-Za-z0-9_]+/,

    _literal: $ => choice(
      $.integer,
      $.float,
      $.string,
      $.char,
      $.boolean,
    ),

    boolean: _ => choice('true', 'false'),

    // A `.` starts a fraction only when it is not the start of `..`, which
    // is what keeps `1..<2` a range and not a float. The fraction needs a
    // digit after the `.` for the same reason: `1..` must not reach for the
    // second `.`.
    string: $ => token(seq(
      '"',
      repeat(choice(
        /[^"\\\n]/,
        seq('\\', choice(
          /[ntr\\"']/,
          '0',
          seq('u', '{', repeat1(HEX_DIGIT), '}'),
        )),
      )),
      '"',
    )),
